src/modules/cvs/components/preview/preview.module.scss
.preview {
    width: 60%;
    margin: 20px auto;
    font-family: Roboto, Helvetica, Arial, sans-serif;
}

.preview_basic_info {
    font-size: clamp(0.8rem, 5vw, 1.2rem);
    page-break-after: always;
}

.preview_left_col {
    border-right: 1px solid #c63031;
    width: 12rem;
    flex-shrink: 0;
}

.preview_right_col {
    padding-left: 30px;
}

.preview_col {
    padding-right: 30px;
    gap: 20px;
}

.title {
    font-weight: 600;
}

.preview_name {
    font-size: 2rem;
    font-weight: 600;
}

.project_wrapper {
    margin-bottom: 25px;
    font-size: clamp(0.8rem, 5vw, 1.2rem);
}

.project_left_col {
    padding-top: 20px;
    width: 20rem;
    flex-shrink: 0;
    border-right: 1px solid #c63031;
    padding-right: 2rem;
}

.project_right_col {
    padding-top: 20px;
    padding-left: 2rem;
    gap: 20px;
}

.project_title {
    color: #c63031;
    font-weight: 600;
}

@media only screen and (max-width: 769px) {
    .preview {
        width: 80%;
    }
    .project_left_col {
        width: 12rem;
    }
    .preview_left_col {
        max-width: 12rem;
    }
}

@media only screen and (max-width: 481px) {
    .preview {
        width: 95%;
    }
    .project_left_col {
        width: 8rem;
    }
    .preview_left_col {
        max-width: 8rem;
    }
}

@media print {
    .export_button {
        display: none;
    }
}

